# career-coach

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN_agent_pipeline.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  rag.py  session.py  tracing.py
app/agents/: agent1_intake.py  agent2_resume.py  agent3_interview.py  agent4_validator.py  base.py
app/middleware/: auth.py
app/routers/: chat.py  files.py  upload.py
app/static/: index.html
db/: init.sql
db/migrations/: 001_add_auth_id.sql  002_conversation_panel_state.sql  003_add_request_traces.sql  004_clerk_auth_id.sql
docs/: system-overview.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/contexts/: AuthContext.jsx  ChatContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAutoResize.js  useConversations.js  useFileAttachments.js  useStream.js
frontend/src/lib/: supabase.js
prompts/: agent1_intake_fit.md  agent2_resume.md  agent3_interview.md  agent4_interview_coaching.txt  agent4_interview_evaluation.txt  agent4_resume_validation.txt  agent4_validator.md  career_coach_system_prompts.docx
tasks/: agent4_task_brief.md  auth_task_brief.md  career-coach-react-migration.md  init_task.md  model_infrastructure.md  postgres_docker_task_brief.md  productionize_task_brief.md  rag_task_brief.md  task.md  taskbrief.md  unified_conversation_memory.md
tasks/plans/: auth_supabase_plan.md  observability-plan.md  system_opimization.md
(+17 files in other folders)
